--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://argedik.github.io/",
+  "homepage": "https://argedik.github.io/Kodluyoruz-Task3",
   "name": "task-3",
   "version": "0.1.0",
   "private": true,
